--- a/index.html
+++ b/index.html
@@ -3,27 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Vladyslav Slovinskyi</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<img src="images/cv.jpg" width="448px" height="252px"></img>
-<h1>Vladyslav Slovinskyi</h1>
-<span>Associate Software Engineer</span>
-<p>
-    Hard-working C++ programmer with one year of commercial experience designing and developing
-    software applications for Windows and Linux. Because of full-time studies in two degree programs
-    I acquired the ability to quickly assimilate a large amount of knowledge and use it in practical
-    applications. Fast learner, hard worker, team player and Star Wars lover.
-</p>
-<h2>PROFESSIONAL EXPERIENCE</h2>
-<ul>
-    <li>2022-current: GlobalLogic - Associate Software Engineer</li>
-    <li>2021-2022: Polpress - C++ Software Developer</li>
-</ul>
-<h2>HIGHER EDUCATION</h2>
-<ul>
-    <li>2020-current: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Computer Science | Third-year student</li>
-    <li>2019-2021: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Master of Science</li>
-    <li>2016-2019: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Bachelor of Science</li>
-</ul>
+    <div class="container">
+    <header>
+        <img src="images/photo.jpg"/>
+        <div>
+            <h1>Vladyslav Slovinskyi</h1>
+            <span>Associate Software Engineer</span>
+           <div>
+               <a class="cv-download-link" href="https://store3.gofile.io/download/94509ac8-9e99-442b-a18a-f9f007d14854/VSlovinskyi_CV.pdf">Download CV</a>
+           </div>
+        </div>
+        <address>
+            <ul>
+                <li><img class="address-icon" src="images/location.png"/>Kraków, Poland</li>
+                <li><img class="address-icon" src="images/phone.png"/><a href="tel:+48 690 938 285">+48 690 938 285</a></a></li>
+                <li><img class="address-icon" src="images/email.png"/><a href="mailto:msc.slowinski@gmail.com">msc.slowinski@gmail.com</a></li>
+                <li><img class="address-icon" src="images/github.png"/><a href="https://github.com/wslowinski">https://github.com/wslowinski</a></li>
+            </ul>
+        </address>
+    </header>
+    <main>
+        <section>
+            <h2>PROFILE</h2>
+            <p>
+                Hard-working C++ programmer with one year of commercial experience designing and developing
+                software applications for Windows and Linux. Because of full-time studies in two degree programs
+                I acquired the ability to quickly assimilate a large amount of knowledge and use it in practical
+                applications. Fast learner, hard worker, team player and Star Wars lover.
+            </p>
+        </section>
+        <section>
+            <h2>PROFESSIONAL EXPERIENCE</h2>
+            <ul>
+                <li>2022-current: GlobalLogic - Associate Software Engineer</li>
+                <li>2021-2022: Polpress - C++ Software Developer</li>
+            </ul>
+        </section>
+        <section>
+            <h2>HIGHER EDUCATION</h2>
+            <ul>
+                <li>2020-current: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Computer Science | Third-year student</li>
+                <li>2019-2021: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Master of Science</li>
+                <li>2016-2019: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Bachelor of Science</li>
+            </ul>
+        </section>
+    </main>
+    </div>
 </body>
 </html>
