--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         </div>
         <address>
             <ul>
-                <li><img class="address-icon" src="images/location.png"/>Kraków, Poland</li>
+                <li><img class="address-icon" src="images/google.png"/>Kraków, Poland</li>
                 <li><img class="address-icon" src="images/phone.png"/><a href="tel:+48 690 938 285">+48 690 938 285</a></a></li>
                 <li><img class="address-icon" src="images/email.png"/><a href="mailto:msc.slowinski@gmail.com">msc.slowinski@gmail.com</a></li>
                 <li><img class="address-icon" src="images/github.png"/><a href="https://github.com/wslowinski">https://github.com/wslowinski</a></li>
+<!--                <li><img class="address-icon" src="images/linkedin.png"/><a href="https://www.linkedin.com/in/slovinskyi">https://www.linkedin.com/in/slovinskyi</a></li>-->
             </ul>
         </address>
     </header>
@@ -32,14 +33,30 @@
                 Hard-working C++ programmer with one year of commercial experience designing and developing
                 software applications for Windows and Linux. Because of full-time studies in two degree programs
                 I acquired the ability to quickly assimilate a large amount of knowledge and use it in practical
-                applications. Fast learner, hard worker, team player and Star Wars lover.
+                applications.  I hope that I will be able to fulfill myself as a <b>C++ Software Engineer</b> and my
+                work will contribute to the development of your company.
             </p>
         </section>
         <section>
             <h2>PROFESSIONAL EXPERIENCE</h2>
             <ul>
-                <li>2022-current: GlobalLogic - Associate Software Engineer</li>
-                <li>2021-2022: Polpress - C++ Software Developer</li>
+                <li><a class="period"> 2022-current</a> <a class="position">Associate Software Engineer |</a> <a class="company-name" href="https://www.globallogic.com/pl/careers/">GlobalLogic Poland</a>
+                    <img class="cursor-icon" src="images/cursor.png"/> <img class="location-icon" src="images/location.png"/> <a class="location-name">Kraków, Poland</a> </li>
+                <ul>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Accounting applications design and development using C++</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with FirebirdSQL databases</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Software testing and debugging</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with Git, Bitbucket</a></li>
+                </ul>
+                <p style="margin-bottom:0.5cm;"></p>
+                <li><a class="period"> 2021-2022   </a> <a class="position">C++ Software Developer |</a> <a class="company-name" href="https://www.polpress.pl/">Polpress</a>
+                    <img class="cursor-icon" src="images/cursor.png"/> <img class="location-icon" src="images/location.png"/> <a class="location-name">Kraków, Poland</a> </li>
+                <ul>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Accounting applications design and development using C++</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with FirebirdSQL databases</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Software testing and debugging</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with Git, Bitbucket</a></li>
+                </ul>
             </ul>
         </section>
         <section>
