--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Vladyslav Slovinskyi</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -18,10 +19,10 @@
         </div>
         <address>
             <ul>
-                <li><img class="address-icon" src="images/google.png"/>Kraków, Poland</li>
-                <li><img class="address-icon" src="images/phone.png"/><a href="tel:+48 690 938 285">+48 690 938 285</a></a></li>
-                <li><img class="address-icon" src="images/email.png"/><a href="mailto:msc.slowinski@gmail.com">msc.slowinski@gmail.com</a></li>
-                <li><img class="address-icon" src="images/github.png"/><a href="https://github.com/wslowinski">https://github.com/wslowinski</a></li>
+                <li><img class="address-icon" src="images/google.png"/><a class="city-name">Kraków, Poland</a></li>
+                <li><img class="address-icon" src="images/phone.png"/><a class="address-style-link" href="tel:+48 690 938 285">+48 690 938 285 </a><img class="address-cursor-icon" src="images/cursor.png"/></li>
+                <li><img class="address-icon" src="images/email.png"/><a class="address-style-link" href="mailto:msc.slowinski@gmail.com">msc.slowinski@gmail.com</a><img class="address-cursor-icon" src="images/cursor.png"/></li>
+                <li><img class="address-icon" src="images/github.png"/><a class="address-style-link" href="https://github.com/wslowinski">wslowinski</a><img class="address-cursor-icon" src="images/cursor.png"/></li>
 <!--                <li><img class="address-icon" src="images/linkedin.png"/><a href="https://www.linkedin.com/in/slovinskyi">https://www.linkedin.com/in/slovinskyi</a></li>-->
             </ul>
         </address>
@@ -33,20 +34,20 @@
                 Hard-working C++ programmer with one year of commercial experience designing and developing
                 software applications for Windows and Linux. Because of full-time studies in two degree programs
                 I acquired the ability to quickly assimilate a large amount of knowledge and use it in practical
-                applications.  I hope that I will be able to fulfill myself as a <b>C++ Software Engineer</b> and my
-                work will contribute to the development of your company.
+                applications.
             </p>
         </section>
+        <p style="margin-bottom:-1cm;"></p>
         <section>
             <h2>PROFESSIONAL EXPERIENCE</h2>
             <ul>
                 <li><a class="period"> 2022-current</a> <a class="position">Associate Software Engineer |</a> <a class="company-name" href="https://www.globallogic.com/pl/careers/">GlobalLogic Poland</a>
                     <img class="cursor-icon" src="images/cursor.png"/> <img class="location-icon" src="images/location.png"/> <a class="location-name">Kraków, Poland</a> </li>
                 <ul>
-                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Accounting applications design and development using C++</a></li>
-                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with FirebirdSQL databases</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Embedded systems design and development using C/C++ and Python</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with PostgreSQL databases</a></li>
                     <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Software testing and debugging</a></li>
-                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with Git, Bitbucket</a></li>
+                    <li><img class="responsibility-icon" src="images/circle.png"/> <a class="responsibility">Working with Git, Bitbucket, Jira</a></li>
                 </ul>
                 <p style="margin-bottom:0.5cm;"></p>
                 <li><a class="period"> 2021-2022   </a> <a class="position">C++ Software Developer |</a> <a class="company-name" href="https://www.polpress.pl/">Polpress</a>
@@ -59,12 +60,31 @@
                 </ul>
             </ul>
         </section>
+        <p style="margin-bottom:-1cm;"></p>
         <section>
             <h2>HIGHER EDUCATION</h2>
             <ul>
-                <li>2020-current: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Computer Science | Third-year student</li>
-                <li>2019-2021: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Master of Science</li>
-                <li>2016-2019: <a href="https://en.uj.edu.pl/en">Jagiellonian University</a> - Astronomy | Bachelor of Science</li>
+                <li><a class="period"> 2020-current</a> <a class="position">Computer Science |</a> <a class="company-name">Third-year student</a>
+                    <ul>
+                        <li><img class="university-icon" src="images/location.png"/> <a class="faculty-name">Faculty of Physics, Astronomy and Applied Computer Science,</a> </li>
+                        <li><a class="university-name">Jagiellonian University, Poland</a> </li>
+                    </ul>
+                    <p style="margin-bottom:0.5cm;"></p>
+                <li><a class="period"> 2019-2021   </a> <a class="position">Astronomy |</a> <a class="company-name">Master of Science</a>
+                    <ul>
+                        <li><img class="university-icon" src="images/location.png"/> <a class="faculty-name">Faculty of Physics, Astronomy and Applied Computer Science,</a> </li>
+                        <li><a class="university-name">Jagiellonian University, Poland</a> </li>
+                        <li><a class="diploma-topic">Topic of diploma dissertation: </a>Distance function in a plane symmetric</li>
+                        <li><a class="diploma-topic-end">Lema&icirctre-Tolman-Bondi models</a></li>
+                    </ul>
+                <p style="margin-bottom:0.5cm;"></p>
+                <li><a class="period"> 2016-2019   </a> <a class="position">Astronomy |</a> <a class="company-name">Bachelor of Science</a>
+                    <ul>
+                        <li><img class="university-icon" src="images/location.png"/> <a class="faculty-name">Faculty of Physics, Astronomy and Applied Computer Science,</a> </li>
+                        <li><a class="university-name">Jagiellonian University, Poland</a> </li>
+                        <li><a class="diploma-topic">Topic of diploma dissertation: </a>Light propagation analysis in an inhomogeneous</li>
+                        <li><a class="diploma-topic-end">cosmological model</a></li>
+                    </ul>
             </ul>
         </section>
     </main>
