Add LinkedIn Link

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <address>
             <ul>
                 <li><img class="address-icon" src="images/google.png"/><a class="city-name">Kraków, Poland</a></li>
-                <li><img class="address-icon" src="images/phone.png"/><a class="address-style-link" href="tel:+48 690 938 285">+48 690 938 285 </a><img class="address-cursor-icon" src="images/cursor.png"/></li>
+<!--                <li><img class="address-icon" src="images/phone.png"/><a class="address-style-link" href="tel:+48 690 938 285">+48 690 938 285 </a><img class="address-cursor-icon" src="images/cursor.png"/></li>-->
+                <li><img class="address-icon" src="images/linkedin.png"/><a class="address-style-link" href="https://www.linkedin.com/in/slovinskyi">slovinskyi</a><img class="address-cursor-icon" src="images/cursor.png"/></li>
                 <li><img class="address-icon" src="images/email.png"/><a class="address-style-link" href="mailto:msc.slowinski@gmail.com">msc.slowinski@gmail.com</a><img class="address-cursor-icon" src="images/cursor.png"/></li>
                 <li><img class="address-icon" src="images/github.png"/><a class="address-style-link" href="https://github.com/wslowinski">wslowinski</a><img class="address-cursor-icon" src="images/cursor.png"/></li>
-<!--                <li><img class="address-icon" src="images/linkedin.png"/><a href="https://www.linkedin.com/in/slovinskyi">https://www.linkedin.com/in/slovinskyi</a></li>-->
+<!--                <li><img class="address-icon" src="images/linkedin.png"/><a class="address-style-link" href="https://www.linkedin.com/in/slovinskyi">slovinskyi</a><img class="address-cursor-icon" src="images/cursor.png"/></li>-->
             </ul>
         </address>
     </header>
